# hospital-allocation

./: README.md  main.py  pyproject.toml  solution.csv  solution_doctors.csv  solution_tasks.csv
