[tool.poetry]
name = "hospital-allocation"
version = "0.1.0"
description = ""
authors = ["Filippo Pellizzari <filippo.pellizzari109@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pulp = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
