[tool.poetry]
name = "hospital-allocation"
version = "0.1.0"
description = ""
authors = ["Filippo Pellizzari <filippo.pellizzari109@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pulp = "^2.7.0"
pandas = "^2.1.4"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
